@@ -55,6 +55,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <release>14</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
